<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">&#43;</string>
    <string name="minus">&#8722;</string>
    <string name="multiplication">&#215;</string>
    <string name="division">&#247;</string>
    <string name="clear">C</string>
    <string name="open_parenthesis">&#40;</string>
    <string name="close_parenthesis">&#41;</string>
    <string name="percentage">&#37;</string>
    <string name="dot">&#46;</string>
    <string name="equal">&#61;</string>
    <string name="clear_history">CLEAR HISTORY</string>
</resources>